<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:contentPadding="3dp"
    app:cardElevation="3dp"
    app:cardBackgroundColor="@color/white"
    >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/productIv"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_store"
            />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@id/productIv"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nomeProdutoTv"
                android:text="@string/nome_produto"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/qtdProdutoTv"
                android:text="@string/qtd_produto"
                android:textSize="18sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/categoriaProdutoTv"
                android:text="@string/categoria_produto"
                android:textSize="18sp"
                />

        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editBtn"
            android:src="@drawable/ic_action_pencil"
            android:background="@null"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"


            />

    </RelativeLayout>

</androidx.cardview.widget.CardView>